--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "mongoose": "^8.7.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "winston": "^3.15.0"
   }
 }
