--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "helmet": "^8.0.0",
     "mongoose": "^8.7.2",
     "mysql2": "^3.11.3",
+    "validator.js": "^2.0.4",
     "winston": "^3.15.0"
   }
 }
