--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "mysql2": "^3.11.3",
-    "validator.js": "^2.0.4",
+    "validator": "^13.12.0",
     "winston": "^3.15.0"
   }
 }
